--- a/termofor.yaml
+++ b/termofor.yaml
@@ -2,6 +2,11 @@
 - hosts: terraform
   become: yes
   tasks:
+    - name: install unzip
+      yum:
+        name: unzip
+        state: present
+
     - name: install terraform
       shell: curl -o /tmp/terraform.zip https://releases.hashicorp.com/terraform/0.12.2/terraform_0.12.2_linux_amd64.zip
 
